force-app/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <description>Related object to Invoice for Invoice Product and Service Lines. Invoice Line records are created on Order release.</description>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoice Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>