force-app/main/default/objects/InvoiceLine__c/fields/CalculatedQuantity__c.field-meta.xml
<CustomField>
    <fullName>CalculatedQuantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculated Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>