force-app/main/default/objects/InvoiceLine__c/fields/CustomerPOLine__c.field-meta.xml
<CustomField>
    <fullName>CustomerPOLine__c</fullName>
    <formula>&quot;99999&quot;</formula>
    <label>Customer PO Line</label>
    <type>Text</type>
</CustomField>