force-app/main/default/objects/InvoiceLine__c/fields/CustomerPONumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerPONumber__c</fullName>
    <formula>&quot;99999&quot;</formula>
    <label>Customer PO Number</label>
    <type>Text</type>
</CustomField>