force-app/main/default/objects/InvoiceLine__c/fields/DiscountPercent2__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>