force-app/main/default/objects/InvoiceLine__c/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>