force-app/main/default/objects/InvoiceLine__c/fields/DiscountSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountSalesPrice__c</fullName>
    <description>Effective Price is the Sales Price with Discounts Applied.</description>
    <formula>round(TotalAmount__c  /  Quantity__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>