force-app/main/default/objects/InvoiceLine__c/fields/LineAmount__c.field-meta.xml
<CustomField>
    <fullName>LineAmount__c</fullName>
    <formula>BLANKVALUE(CalculatedQuantity__c, Quantity__c) * SalesPrice__c</formula>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>