force-app/main/default/objects/InvoiceLine__c/fields/LineDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>LineDiscountAmount__c</fullName>
    <formula>round(DiscountPercent2__c * LineAmount__c,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>