force-app/main/default/objects/InvoiceLine__c/fields/ProductService__c.field-meta.xml
<CustomField>
    <fullName>ProductService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product/Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>