force-app/main/default/objects/InvoiceLine__c/fields/ProductServiceName__c.field-meta.xml
<CustomField>
    <fullName>ProductServiceName__c</fullName>
    <description>Product/Service Name used in the Order Line.</description>
    <formula>&quot;TEST&quot;</formula>
    <inlineHelpText>Product/Service Name used in the Order Line</inlineHelpText>
    <label>Product/Service Name</label>
    <type>Text</type>
</CustomField>