force-app/main/default/objects/InvoiceLine__c/fields/ServiceTerm__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerm__c</fullName>
    <formula>9999</formula>
    <label>Service Term</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>