force-app/main/default/objects/InvoiceLine__c/fields/TaxExciseRate__c.field-meta.xml
<CustomField>
    <fullName>TaxExciseRate__c</fullName>
    <formula>99999</formula>
    <label>Tax Excise Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>