force-app/main/default/objects/InvoiceLine__c/fields/TaxUsageRate__c.field-meta.xml
<CustomField>
    <fullName>TaxUsageRate__c</fullName>
    <formula>99999</formula>
    <label>Tax Usage Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>