force-app/main/default/objects/InvoiceLine__c/fields/TaxVAT__c.field-meta.xml
<CustomField>
    <fullName>TaxVAT__c</fullName>
    <formula>&quot;TEST&quot;</formula>
    <label>Tax</label>
    <type>Text</type>
</CustomField>