force-app/main/default/objects/InvoiceLine__c/fields/UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitofMeasure__c</fullName>
    <label>Unit of Measure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>