force-app/main/default/objects/InvoiceLine__c/fields/UnitofTerm__c.field-meta.xml
<CustomField>
    <fullName>UnitofTerm__c</fullName>
    <label>Unit of Term</label>
    <length>30</length>
    <type>Text</type>
</CustomField>