force-app/main/default/objects/InvoiceLine__c/fields/VATRate__c.field-meta.xml
<CustomField>
    <fullName>VATRate__c</fullName>
    <formula>99999</formula>
    <label>VAT/GST Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>